ui fixes for allocated tasks

--- a/app/views/allocated_tasks/index.html.erb
+++ b/app/views/allocated_tasks/index.html.erb
@@ -1,7 +1,7 @@
 <html lang="en">
 <div class="jumbotron allocated-task-bg">
 	<div class="textCenter">
-		<h1 class="title-banner">Allocated Tasks</h1>
+		<h2 class="title-banner">Allocated Tasks</h2>
 
 </div>
 
@@ -11,14 +11,14 @@
   <!-- Example row of columns -->
 	<div class="row">
     	<div class="col-md-4 op-title-bg-left">
-    		<h2 class="op-title">Assigned</h2>
+    		<h2 class="op-title-col">Assigned</h2>
     	</div>
     
 	    <div class="col-md-4 op-title-bg-middle">
-    		<h2 class="op-title">In Progress</h2>
+    		<h2 class="op-title-col">In Progress</h2>
     	</div> 
     	<div class="col-md-4 op-title-bg-right">
-    		<h2 class="op-title">Done</h2>
+    		<h2 class="op-title-col">Done</h2>
     	</div>
     	<div class="textColor">
     		<div class="row-2">
