--- a/app/assets/stylesheets/allocated_tasks.css.scss
+++ b/app/assets/stylesheets/allocated_tasks.css.scss
@@ -60,3 +60,8 @@
 	background-color: transparent !important;
 }
 
+.op-title-col {
+	font-size: 24px !important;
+	text-align: center !important;
+	color: black !important;
+}
