--- a/app/views/assign/index.html.erb
+++ b/app/views/assign/index.html.erb
@@ -1,2 +1,15 @@
-<h1>Assign#index</h1>
-<p>Find me in app/views/assign/index.html.erb</p>
+<h1><%= @oppty.opptyName%></h1>
+<h2>Assigned Writers</h2>
+<%@assigned_writers.each do |w|%>
+    <h3><%=w.user.name%></h3>
+<%end%>
+<h2>Not Assigned Writers</h2>
+<%@not_assigned_writers.each do |w|%>
+    <h3><%=w.name%></h3>
+    <form method="post" action= "assignUser" >
+      <input name="oppty_id" type="hidden" value="<%= @oppty.id%>">
+      <input name="user_id" type="hidden" value="<%= w.id%>">
+      <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
+      <button class="btn btn-lg btn-primary btn-right" type="submit">Add</button>
+    </form>
+<%end%>
