optimized update crm a little

--- a/app/views/crm/index.html.erb
+++ b/app/views/crm/index.html.erb
@@ -25,6 +25,7 @@
             <form action ="updateCRM" method="post">
               <input hidden=true type="string" name="old" value=<%= @oldFileName%>>
               <input hidden=true type="string" name="new" value=<%= @newFileName%>>
+							<input hidden=true type="string" name="changes" value=<%= @changes%>>
               <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
               <button style= "z-index:3" type="submit">Submit</button>
             </form>
