--- a/app/views/histories/index.html.erb
+++ b/app/views/histories/index.html.erb
@@ -32,7 +32,7 @@
     
     <!--</div>-->
 
-    <div id="userHist">
+    <div id="userHist" style="...">
           <% @user_histories.each do |o| %>
               <div class="success row">
                 <div class="col-md-3" style="text-align: center;"><%= o.history.opptyId %></div>
