--- a/app/views/oppties/show.html.erb
+++ b/app/views/oppties/show.html.erb
@@ -10,6 +10,7 @@
     <p><b>Value:</b> <%= @oppty.value%></p>
     <p><b>Percentage Win:</b> <%= @oppty.pWin%></p>
     <p><b>RFP Date:</b> <%= @oppty.rfpDate%></p>
+    <p><b>Proposal Due Date:</b> <%= @oppty.proposalDueDate%></p>
     <p><b>Award Date:</b> <%= @oppty.awardDate%></p>
     <p><b>Submit Date:</b> <%= @oppty.submitDate%></p>
     <p><b>Number of Writers</b>:</b> <%= @numWriters%></p>
