--- a/app/views/browse/limit.html.erb
+++ b/app/views/browse/limit.html.erb
@@ -27,7 +27,7 @@
                   </td>
 
                   <td class="col-md-1">
-                    <form action="limit" method="get">
+                    <form action="limit" method="get" name="limiting">
                       <label class="toggle-btn radio black-text">
                         <input id="thirty_days_left" name="within" type="radio" value=30 checked="false">30 Days
                       </label> 
@@ -80,8 +80,8 @@
                 </div>
               </tr>
             </table>
-          </div>    
-        </div>    
+          </div>
+      </div>    
       <br>
     </div>
 
@@ -150,9 +150,6 @@
         <div name="paginate-div"><%= will_paginate @oppties, previous_label: h("<"), next_label: h(">") %></div>
       </div>
     </div>
-
-
-
   </div>
 
 
@@ -184,19 +181,19 @@
       else if (select == "none")
         window.location.assign( window.location.href );
       else if (select == "proposalDueDate")
-        window.location.assign( window.location.href + "&sort=proposalDueDate" );
+        window.location.assign( window.location.href + "?sort=proposalDueDate" );
       else if (select == "opptyName")
-        window.location.assign(window.location.href + "&sort=opptyName");
+        window.location.assign(window.location.href + "?sort=opptyName");
       else if (select == "opptyId")
-        window.location.assign(window.location.href + "&sort=opptyId");
+        window.location.assign(window.location.href + "?sort=opptyId");
       else if (select == "captureMgr")
-        window.location.assign(window.location.href + "&sort=captureMgr");
+        window.location.assign(window.location.href + "?sort=captureMgr");
       else if (select == "programMgr")
-        window.location.assign(window.location.href + "&sort=programMgr");
+        window.location.assign(window.location.href + "?sort=programMgr");
       else if (select == "proposalMgr")
-        window.location.assign(window.location.href + "&sort=proposalMgr");
+        window.location.assign(window.location.href + "?sort=proposalMgr");
       else if (select == "value")
-        window.location.assign(window.location.href + "&sort=value");
+        window.location.assign(window.location.href + "?sort=value");
     });
 
     $(document).on("click", "a[name='radio-style-btn']", function (e) {
@@ -222,30 +219,8 @@
         window.location.assign(window.location.href + "?within=90");
     });
 
-    window.onload = function() {
-      console.log("Inside function");
-      if (document.cookie.indexOf('mycookie')==-1||document.cookie.indexOf('mycookie')==0) {
-      	console.log("This is NOT a Refresh");
-        // cookie doesn't exist, create it now
-        document.cookie = 'mycookie=1';
-      }
-      else {
-      	console.log("This is a Refresh and " + document.cookie.indexOf('mycookie'));
-      	// reset cookie
-        delete_cookie('mycookie');
-        // not first visit, so alert
-        location.href = '<%=browse_index_path%>';
-      }
-    }
+  </script>
 
-    function delete_cookie(name) {
-      document.cookie = name + '=-1; expires=Thu, 01 Jan 1970 00:00:01 GMT;';
-    }
-
-    $(document).on("click", "input[name='searchButton']", function (e) {
-      delete_cookie('mycookie');
-    });
-    
-  </script> 
 </body>
 </html>
+
