--- a/app/views/allocated_tasks/index.html.erb
+++ b/app/views/allocated_tasks/index.html.erb
@@ -38,11 +38,11 @@
             <h4><%= name+': '%></h4>
             <%if @todo_writer_dict[id].present?%>
                 <% @todo_writer_dict[id].each do |o|%>
+                    <%= link_to o.oppty.opptyName, o.oppty%>
                     <br>
-                    <%= o.oppty.opptyName%>
                 <%end%>
             <%end%>
-            <br>
+
         <%end%>
       </div>
       <div class="col-md-4 op-body-bg-middle">
@@ -50,11 +50,10 @@
             <h4><%= name+': '%></h4>
             <%if @doing_writer_dict[id].present?%>
                 <% @doing_writer_dict[id].each do |o|%>
+                    <%= link_to o.oppty.opptyName, o.oppty%>
                     <br>
-                    <%= o.oppty.opptyName%>
                 <%end%>
             <%end%>
-            <br>
         <%end%>
       </div>
       <div class="col-md-4 op-body-bg-right">
@@ -62,11 +61,10 @@
             <h4><%= name+': '%></h4>
             <%if @done_writer_dict[id].present?%>
                 <% @done_writer_dict[id].each do |o|%>
+                    <%= link_to o.oppty.opptyName, o.oppty%>
                     <br>
-                    <%= o.oppty.opptyName%>
                 <%end%>
             <%end%>
-            <br>
         <%end%>
       </div>
 	</div>
