--- a/app/views/browse/index.html.erb
+++ b/app/views/browse/index.html.erb
@@ -21,7 +21,7 @@
               <tr>
                 <div class="col-md-9">
                   <td class="col-md-1">
-                    <label class="black-text field-label">
+                    <label class="black-text field-label" style="padding-left: 101px;">
                   		Within:
                 		</label>
               		</td>
